apps/production/kawan-ngonser-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: kawan-ngonser-be-service
spec:
  selector:
    app: kawan-ngonser-be
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3001
      protocol: TCP
